# philosophers

./: .gitignore  CMakeLists.txt  README.md
philo/: Makefile  life.c  main.c  philo.c  philo.h  utils.c
philo/include/: philo.h
philo/srcs/: check.c  life.c  main.c  philo.c  utils.c  writer.c
philo_bonus/: Makefile
philo_bonus/include/: philo_bonus.h
philo_bonus/srcs/: check.c  life.c  main.c  philo.c  utils.c  writer.c
